--- a/manifest.json
+++ b/manifest.json
@@ -3,12 +3,14 @@
     "name": "ALX intranet dark",
     "description": "This extension will provide a dark mode support for ALX intranet",
     "version": "0.0.1",
-    "background": {
-        "service_worker": "background.js"
-    },
-    "action": {},
-    "permissions": [
-        "activeTab",
-        "scripting"
+    "content_scripts": [
+        {
+            "matches": [
+                "https://alx-intranet.hbtn.io/*"
+            ],
+            "css": [
+                "intranet-dark.css"
+            ]
+        }
     ]
 }
